--- a/HW_JS.html
+++ b/HW_JS.html
@@ -18,33 +18,33 @@
     // x = 6 + 14 - 6*4 = -4
     document.write(x + "<br>")
 
-    var x = 6;
-    var y = 14;
-    var z = 4;
+     x = 6;
+     y = 14;
+     z = 4;
 
     z = --x -y*5;
     // z = 5 -14*5 = -65
     document.write(z + "<br>")
 
-    var x = 6;
-    var y = 14;
-    var z = 4;
+     x = 6;
+     y = 14;
+     z = 4;
 
     y /= x + 5%z;
     // y = 14/(6 + 1) = 2
     document.write(y + "<br>")
 
-    var x = 6;
-    var y = 14;
-    var z = 4;
+     x = 6;
+     y = 14;
+     z = 4;
 
-    z -= x++ + y*5;
-    // z = 4 - (6 + 14*5) = -72
-    document.write(z + "<br>")
+    var res = z - x++ + y*5;
+    // res = 4 - 6 + 14*5 = 68
+    document.write(res + "<br>")
 
-    var x = 6;
-    var y = 14;
-    var z = 4;
+     x = 6;
+     y = 14;
+     z = 4;
 
     x = y - x++*z;
     // x = 14 - 6*4 = -10
